--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@supabase/supabase-js": "latest",
     "autoprefixer": "10.4.15",
     "geist": "^1.0.0",
+    "js-cookie": "^3.0.5",
     "next": "latest",
     "postcss": "8.4.29",
     "react": "18.2.0",
