--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@supabase/auth-helpers-nextjs": "^0.8.7",
+    "@supabase/auth-helpers-react": "^0.4.2",
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/ssr": "latest",
@@ -17,6 +18,7 @@
     "next": "latest",
     "postcss": "8.4.29",
     "react": "18.2.0",
+    "react-datetime-picker": "^5.6.0",
     "react-dom": "18.2.0",
     "react-input-slider": "^6.0.1",
     "tailwindcss": "3.3.3",
